--- a/Sistemas/Mercado/src/main/java/view/FormVenda.form
+++ b/Sistemas/Mercado/src/main/java/view/FormVenda.form
@@ -624,6 +624,9 @@
           <Image iconType="3" name="/images/icon Pesquisar.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
