--- a/Sistemas/Mercado/src/main/java/view/TelaPrincipal.form
+++ b/Sistemas/Mercado/src/main/java/view/TelaPrincipal.form
@@ -67,6 +67,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Consultar Venda"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miConsultaVendaActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
